--- a/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/kustomization.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - models-cache-flan.yaml
   - models-cache-mistral.yaml
