Switched to llama2 model and changed names

--- a/argocd/ai-llm-demo/kustomize/base/services/gradio-hftgi-rag-redis-model1.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/services/gradio-hftgi-rag-redis-model1.yaml
@@ -1,9 +1,9 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: hf-text-generation-inference-server-mistral
+  name: gradio-hftgi-rag-redis-model1
   labels:
-    app: hf-text-generation-inference-server-mistral
+    app: gradio-hftgi-rag-redis-model1
 spec:
   clusterIP: None
   ipFamilies:
@@ -11,9 +11,13 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 3000
+      port: 7860
       targetPort: http
+    - name: metrics
+      protocol: TCP
+      port: 8000
+      targetPort: 8000
   internalTrafficPolicy: Cluster
   type: ClusterIP
   selector:
-    app: hf-text-generation-inference-server-mistral
+    app: gradio-hftgi-rag-redis-model1
