--- a/argocd/ai-llm-demo/kustomize/base/deployments/gradio-hftgi-rag-redis-model1.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/deployments/gradio-hftgi-rag-redis-model1.yaml
@@ -1,18 +1,18 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: gradio-hftgi-rag-redis-mistral
+  name: gradio-hftgi-rag-redis-model1
   labels:
-    app: gradio-hftgi-rag-redis-mistral
+    app: gradio-hftgi-rag-redis-model1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: gradio-hftgi-rag-redis-mistral
+      app: gradio-hftgi-rag-redis-model1
   template:
     metadata:
       labels:
-        app: gradio-hftgi-rag-redis-mistral
+        app: gradio-hftgi-rag-redis-model1
     spec:
       volumes:
         - name: redis-schema
@@ -67,7 +67,7 @@ spec:
               value: Talk with your documentation
             - name: INFERENCE_SERVER_URL
               value: >-
-                http://hf-text-generation-inference-server-mistral.$(NAMESPACE).svc.cluster.local:3000
+                http://hf-text-generation-inference-server-model1.$(NAMESPACE).svc.cluster.local:3000
             - name: REDIS_URL
               value: >-
                 redis://default:$(DB_PASS)@my-doc-headless.$(NAMESPACE).svc.cluster.local:10225
@@ -75,8 +75,7 @@ spec:
               value: docs
             - name: MAX_NEW_TOKENS
               value: '1024'
-            - name: TOP_K
-              value: '10'
+            - name: TOP_Kmistral
             - name: TOP_P
               value: '0.95'
             - name: TYPICAL_P
