--- a/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/kustomization.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - models-cache-mistral.yaml
+  - models-cache-model1.yaml
