--- a/argocd/ai-llm-demo/kustomize/base/deployments/hf-text-generation-inference-server-model1.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/deployments/hf-text-generation-inference-server-model1.yaml
@@ -1,19 +1,19 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: hf-text-generation-inference-server-mistral
+  name: hf-text-generation-inference-server-model1
   labels:
-    app: hf-text-generation-inference-server-mistral
+    app: hf-text-generation-inference-server-model1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hf-text-generation-inference-server-mistral
+      app: hf-text-generation-inference-server-model1
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: hf-text-generation-inference-server-mistral
+        app: hf-text-generation-inference-server-model1
     spec:
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -58,7 +58,7 @@ spec:
             failureThreshold: 3
           env:
             - name: MODEL_ID
-              value: mistralai/Mistral-7B-Instruct-v0.1
+              value: meta-llama/Llama-2-7b-chat-hf
             - name: MAX_INPUT_LENGTH
               value: '1024'
             - name: MAX_TOTAL_TOKENS
@@ -69,6 +69,11 @@ spec:
               value: '3000'
             - name: HOST
               value: 0.0.0.0
+            - name: HUGGING_FACE_HUB_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: huggingface-hub-token
+                  key: token
           securityContext:
             capabilities:
               drop:
@@ -97,11 +102,11 @@ spec:
             - name: shm
               mountPath: /dev/shm
           terminationMessagePolicy: File
-          image: 'ghcr.io/huggingface/text-generation-inference:1.1.0'
+          image: 'ghcr.io/huggingface/text-generation-inference:1.3.3'
       volumes:
         - name: models-cache
           persistentVolumeClaim:
-            claimName: models-cache-mistral
+            claimName: models-cache-model1
         - name: shm
           emptyDir:
             medium: Memory
