--- a/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
+++ b/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
@@ -1,16 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: tgis-llm-demo
+generatorOptions:
+  disableNameSuffixHash: true
 patchesJSON6902:
-  - target:
-      group: operators.coreos.com
-      version: v1
-      kind: OperatorGroup
-      name: redis
-    patch: |-
+  - patch: |-
       - op: replace
         path: /spec/targetNamespaces/0
         value: tgis-llm-demo
+    target:
+      group: operators.coreos.com
+      kind: OperatorGroup
+      name: redis
+      version: v1
 resources:
   - ../../base/operators.coreos.com/operatorgroups/redis
   - ../../base/operators.coreos.com/subscriptions/redis
@@ -23,3 +25,7 @@ resources:
   - ../../base/routes
   - ../../base/jobs
   - namespaces
+secretGenerator:
+  - literals:
+      - token=PLACEHOLDER
+    name: huggingface-hub-token
