--- a/argocd/ai-llm-demo/kustomize/base/deployments/hf-text-generation-inference-server-model2.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/deployments/hf-text-generation-inference-server-model2.yaml
@@ -1,19 +1,19 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: hf-text-generation-inference-server-flan
+  name: hf-text-generation-inference-server-model2
   labels:
-    app: hf-text-generation-inference-server-flan
+    app: hf-text-generation-inference-server-model2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hf-text-generation-inference-server-flan
+      app: hf-text-generation-inference-server-model2
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: hf-text-generation-inference-server-flan
+        app: hf-text-generation-inference-server-model2
     spec:
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -58,13 +58,11 @@ spec:
             failureThreshold: 3
           env:
             - name: MODEL_ID
-              value: google/flan-t5-xl
+              value: mistralai/Mistral-7B-Instruct-v0.1
             - name: MAX_INPUT_LENGTH
               value: '1024'
             - name: MAX_TOTAL_TOKENS
               value: '2048'
-            - name: QUANTIZE
-              value: bitsandbytes
             - name: HUGGINGFACE_HUB_CACHE
               value: /models-cache
             - name: PORT
@@ -103,7 +101,7 @@ spec:
       volumes:
         - name: models-cache
           persistentVolumeClaim:
-            claimName: models-cache-flan
+            claimName: models-cache-model2
         - name: shm
           emptyDir:
             medium: Memory
