--- a/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/models-cache-model1.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/models-cache-model1.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: models-cache-mistral
+  name: models-cache-model1
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 60Gi
+      storage: 30Gi
   volumeMode: Filesystem
