--- a/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/models-cache-model2.yaml
+++ b/argocd/ai-llm-demo/kustomize/base/persistentvolumeclaims/models-cache-model2.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: models-cache-flan
+  name: models-cache-model2
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 60Gi
+      storage: 30Gi
   volumeMode: Filesystem
