--- a/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
+++ b/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: tgis-llm-demo
 generatorOptions:
   disableNameSuffixHash: true
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 patchesJSON6902:
   - patch: |-
       - op: replace
