--- a/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
+++ b/argocd/ai-llm-demo/kustomize/overlays/dev/kustomization.yaml
@@ -13,7 +13,17 @@ patchesJSON6902:
       kind: OperatorGroup
       name: redis
       version: v1
+  - target:
+      group: rbac.authorization.k8s.io
+      version: v1
+      kind: ClusterRoleBinding
+      name: 'system:openshift:scc:redis-enterprise-scc-v2'
+    patch: |-
+      - op: replace
+        path: /subjects/0/namespace
+        value: tgis-llm-demo
 resources:
+  - ../../base/security
   - ../../base/operators.coreos.com/operatorgroups/redis
   - ../../base/operators.coreos.com/subscriptions/redis
   - ../../base/redisenterprises
