--- a/argocd/ai-llm-multiprovider-demo/kustomize/overlays/pgvector/kustomization.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/overlays/pgvector/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 generatorOptions:
   disableNameSuffixHash: true
 kind: Kustomization
-namespace: rag-llm-mmikhail
+namespace: rag-llm
 secretGenerator:
   - name: postgresql
     literals:
@@ -23,7 +23,7 @@ patchesJSON6902:
     patch: |-
       - op: replace
         path: /subjects/0/namespace
-        value: rag-llm-mmikhail
+        value: rag-llm
 resources:
 # redis stack server deployment
   - ../../base/pgvector/persistentvolumeclaims
