--- a/argocd/ai-llm-multiprovider-demo/kustomize/overlays/pgvector/namespaces/namespace.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/overlays/pgvector/namespaces/namespace.yaml
@@ -5,5 +5,5 @@ metadata:
     argocd.argoproj.io/managed-by: openshift-gitops
   annotations:
     openshift.io/display-name: "Demo LLM"
-  name: rag-llm-mmikhail
+  name: rag-llm
 spec: {}
