--- a/argocd/ai-llm-multiprovider-demo/kustomize/base/redis-enterprise/redisenterprisedatabases/redisenterprisedatabase.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/base/redis-enterprise/redisenterprisedatabases/redisenterprisedatabase.yaml
@@ -1,7 +1,7 @@
 apiVersion: app.redislabs.com/v1alpha1
 kind: RedisEnterpriseDatabase
 metadata:
-  name: my-doc
+  name: vectordb
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
@@ -9,8 +9,8 @@ spec:
   memorySize: 3GB
   modulesList:
     - name: search
-      version: 2.8.9
-  persistence: snapshotEvery12Hour
+      version: 2.8.12
+  persistence: disabled
   replication: true
   tlsMode: disabled
   type: redis
