--- a/argocd/ai-llm-multiprovider-demo/kustomize/overlays/edb/kustomization.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/overlays/edb/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 generatorOptions:
   disableNameSuffixHash: true
 kind: Kustomization
-namespace: rag-llm
+namespace: rag-llm-edb
 patchesJSON6902:
   # - target:
   #     kind: Job
@@ -38,7 +38,7 @@ patchesJSON6902:
     patch: |-
       - op: replace
         path: /spec/targetNamespaces/0
-        value: rag-llm
+        value: rag-llm-edb
   - target:
       group: rbac.authorization.k8s.io
       version: v1
@@ -47,7 +47,7 @@ patchesJSON6902:
     patch: |-
       - op: replace
         path: /subjects/0/namespace
-        value: rag-llm
+        value: rag-llm-edb
 secretGenerator:
   - name: vector-db-config
     literals:
