--- a/argocd/ai-llm-multiprovider-demo/kustomize/base/edb/cluster/vectordb.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/base/edb/cluster/vectordb.yaml
@@ -2,6 +2,8 @@ apiVersion: postgresql.k8s.enterprisedb.io/v1
 kind: Cluster
 metadata:
   name: vectordb
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   logLevel: info
   startDelay: 3600
