--- a/argocd/ai-llm-monitoring/kustomize/base/servicemonitor/rag-tgis-sm.yaml
+++ b/argocd/ai-llm-monitoring/kustomize/base/servicemonitor/rag-tgis-sm.yaml
@@ -3,7 +3,7 @@ kind: ServiceMonitor
 metadata:
   labels:
     app: frontend
-  name: ai-llm-tgis-sm
+  name: rag-tgis-sm
 spec:
   endpoints:
     - port: http
@@ -12,4 +12,4 @@ spec:
       - tgis-llm-demo
   selector:
     matchExpressions:
-      - {key: app, operator: In, values: [hf-text-generation-inference-server-model1,hf-text-generation-inference-server-model2]}
+      - {key: app.kubernetes.io/instance, operator: In, values: [tgis-server]}
