--- a/argocd/ai-llm-multiprovider-demo/kustomize/base/rag-llm/configmaps/files/config.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/base/rag-llm/configmaps/files/config.yaml
@@ -2,9 +2,9 @@ llm_providers:
   - name: "Hugging Face"
     enabled: True
     models:
-      - name: mistral-community/Mistral-7B-v0.2
+      - name: Mistral-7B-v0.2
         weight: 1
-        url: http://hf-text-generation-inference-server-model1:3000
+        url: http://hf-text-generation-inference-server-model1.rag-llm.svc.cluster.local:3000
         params:
           - name: max_new_tokens
             value: 1024
@@ -21,6 +21,6 @@ llm_providers:
           - name: typical_p
             value: 0.95
 default_provider: "Hugging Face"
-default_model: "mistral-community/Mistral-7B-v0.2"
+default_model: "Mistral-7B-v0.2"
 # type values=(default, round_robin,  all)
 type: all
