--- a/argocd/ai-llm-multiprovider-demo/kustomize/base/rag-llm/deployments/hf-text-generation-inference-server-model1.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/base/rag-llm/deployments/hf-text-generation-inference-server-model1.yaml
@@ -111,5 +111,8 @@ spec:
         - key: odh-notebook
           value: 'true'
           effect: NoSchedule
+        - key: nvidia.com/gpu
+          effect: NoSchedule
+          value: 'true'
   strategy:
     type: Recreate
