--- a/argocd/ai-llm-monitoring/kustomize/base/grafanadashboard/ai-llm-dashboard.yaml
+++ b/argocd/ai-llm-monitoring/kustomize/base/grafanadashboard/ai-llm-dashboard.yaml
@@ -1,12 +1,17 @@
-apiVersion: integreatly.org/v1alpha1
+apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: ai-llm-dashboard
+  namespace: llm-monitoring
   labels:
     app: grafana
 spec:
+  allowCrossNamespaceImport: false
+  instanceSelector:
+    matchLabels:
+      dashboards: grafana
   json: |
     {
       "annotations": {
@@ -646,3 +651,4 @@ spec:
       "uid": "HtUdEp4Ik",
       "version": 3
     }
+  resyncPeriod: 10m0s
