--- a/argocd/ai-llm-monitoring/kustomize/base/servicemonitor/rag-gradio-sm.yaml
+++ b/argocd/ai-llm-monitoring/kustomize/base/servicemonitor/rag-gradio-sm.yaml
@@ -3,7 +3,7 @@ kind: ServiceMonitor
 metadata:
   labels:
     app: frontend
-  name: ai-llm-gradio-sm
+  name: rag-gradio-sm
 spec:
   endpoints:
     - port: metrics
@@ -12,4 +12,4 @@ spec:
       - tgis-llm-demo
   selector:
     matchExpressions:
-      - {key: app, operator: In, values: [ui-multiprovider-rag,gradio-hftgi-rag-redis-model1,gradio-hftgi-rag-redis-model2]}
+      - {key: app.kubernetes.io/instance, operator: In, values: [rag-llm]}
