--- a/argocd/ai-llm-multiprovider-demo/kustomize/overlays/elastic-ui-only/deployments/kustomization.yaml
+++ b/argocd/ai-llm-multiprovider-demo/kustomize/overlays/elastic-ui-only/deployments/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ai-rag-monitoring-crb.yaml
+  - ui-multiprovider-rag.yaml
